# 2026-ei-aoopii-c23

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  styles.css
backend/: __init__.py
backend/app/: __init__.py  config.py  main.py  web.py
backend/app/models/: brand.py  post.py
backend/app/services/: __init__.py  business_url_agent.py  content_agent.py  draft_store.py  image_agent.py
backend/app/static/: app.css  app.js
backend/app/templates/: index.html
social_media_autopilot.egg-info/: PKG-INFO  SOURCES.txt
