[project]
name = "social-media-autopilot"
version = "0.1.0"
description = "Academic MVP for an Instagram social media autopilot agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 100
